- Adjusted some vertical spacing issues on Messages tab, Search pane, Labels tree.   Not perfect, but better.

--- a/ProductWebScalaReact/server/src/main/assets/stylesheets/main.less
+++ b/ProductWebScalaReact/server/src/main/assets/stylesheets/main.less
@@ -293,7 +293,7 @@ ol.tree
 	{
 		position: relative;
 		margin-left: 0px;
-		margin-bottom:20px;
+		// margin-bottom:20px;
 		list-style: none;
 	}
 	li.file
@@ -336,5 +336,5 @@ ol.tree
 		padding: 1.563em 0 0 92px;
 		height: auto;
 	}
-		li input:checked + ol > li { display: block; margin: 10px 0 0.125em;  /* 2px */}
-		li input:checked + ol > li:last-child { margin: 10px 0 0.063em; /* 1px */ }
+		li input:checked + ol > li { display: block; margin: 2px 0 0.125em;  /* 2px */}
+		li input:checked + ol > li:last-child { margin: 1px 0 0.063em; /* 1px */ }
